--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     
     <div class="row">
-        <div class="col m6 offset-m3"><div class="subheader"><video controls=""><source src="images/video.mp4" type="video/mp4"></video></div></div>
+        <div class="col m6 offset-m3"><div class="subheader"><video controls=""><source src="images/Video-1.mp4" type="video/mp4"></video></div></div>
 
     </div>
 
