--- a/index.html
+++ b/index.html
@@ -36,11 +36,23 @@
 
         <div class="row">
             <div class="col m8 offset-m2 headTitle2 center">
-                The value of spatial memory in immersive technologies: a journey in the datamemory palace
+                Spatial and kinesthetic cues for recalling data features in Mixed Reality, Virtual Reality, 3D and 2D
             </div>
         
             <div class="col m6 offset-m3 justify">
-                Data visualization technologies present complex data visually in order to make patterns and relationships more salient and actionable,and presumably more memorable. Work on embodied cognition has drawn research attention to the importance of spatial context,and especially kinesthetic cues, in forming and recalling memories, and there is evidence that recall can be enhanced in immersiveenvironments. However, this effect has not been studied systematically in data visualization, or across the range of immersivetechnologies currently available. To more fully understand how spatial context affects memory recall, we address these two questions:Do technologies that increase immersion and proprioception differentially increase the recall of data visualizations? For eachenvironment, what is the nature of the recollection? What do people remember about the topic of the visualization, the location whereit was viewed, and its semantic meaning? To address these questions, we measure data recall and understanding in four environments:2D, 3D, Virtual Reality and Mixed Reality. We ask participants to memorize 4 sets of 10 data visualizations under 4 conditions: ascrollable list of image presented on a computer (2D), images anchored in a 3D graphical environment presented on a computer (3D),images anchored in the same 3D environment presented in a Virtual Reality environment (VR), and virtual images anchored in thesame physical space used to create the previous environments (MR). We measure the number of charts recalled. We also measuredwhether observers also recalled the location, and semantic meaning about the data for correctly-recalled data visualizations. Results ofour study indicate that users uniformly performed best in the Mixed Reality environment. Results in this environment outperformedother for syntactic recall – the ability to remember the graphical objects in the image –, semantic recall, – the trend of the data–, andrecall of details – specific data points or units. We were surprised that our results did not indicate that the VR condition outperformed2D and 3D conditions. We could not confirm that empirical evidence from recent studies [13], demonstrating that immersion in VR hada positive impact on recalling visual information compare to 3D, applies to data visualizations. We speculate on the reasons for thisdifference in discussion as well as draw implications for the design of data visualization and storytelling media fostering user recall.</div>
+                Data storytelling often involves presenting a series of visualizations depicting different aspects or facets of a topic, which
+                the audience could recall. Research from cognitive psychology has shown that richer visual environments, such as 3-D representations,
+                Virtual Reality, and Mixed Reality, can augment memory. This paper explores how the additional cues provided by these technologies,
+                through enhanced depth, presence and locomotion, might improve information recall when consuming a corpus of visualizations. Our
+                baseline consists of a 2D page presenting visualizations in a sequential order. We study the effect of adding (1) spatial memory cues–
+                placing visualizations in a 3D room; (2) dynamic depth cues– enabling the user to virtually change his point of view within a 3D room,
+                and (3) kinesthetic cues associated with locomotion– enabling the user to physically move in a room in Mixed Reality. Results of our
+                study with 16 participants show increased recall, greater richness of data understanding, and greater confidence, in the Mixed Reality
+                condition. Participants recalled more visualizations, more syntactic details and more semantic patterns. We discuss how kinesthetic
+                cues provided by locomotion in MR could account for these results. We also discuss why we did not observe enhanced performance in
+                3D and Virtual Reality, which has been observed in other, non-data visualization, contexts  
+            
+            </div>
 
     </div>
 
