--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
             </div>
         
             <div class="col m6 offset-m3 justify">
-                Data storytelling often involves presenting a series of visualizations depicting different aspects or facets of a topic, which
-                the audience could recall. Research from cognitive psychology has shown that richer visual environments, such as 3-D representations,
-                Virtual Reality, and Mixed Reality, can augment memory. This paper explores how the additional cues provided by these technologies,
-                through enhanced depth, presence and locomotion, might improve information recall when consuming a corpus of visualizations. Our
-                baseline consists of a 2D page presenting visualizations in a sequential order. We study the effect of adding (1) spatial memory cues–
-                placing visualizations in a 3D room; (2) dynamic depth cues– enabling the user to virtually change his point of view within a 3D room,
-                and (3) kinesthetic cues associated with locomotion– enabling the user to physically move in a room in Mixed Reality. Results of our
-                study with 16 participants show increased recall, greater richness of data understanding, and greater confidence, in the Mixed Reality
-                condition. Participants recalled more visualizations, more syntactic details and more semantic patterns. We discuss how kinesthetic
-                cues provided by locomotion in MR could account for these results. We also discuss why we did not observe enhanced performance in
-                3D and Virtual Reality, which has been observed in other, non-data visualization, contexts  
+                The rich visual cues of the real world can help us encode, process and remember information. Advanced visual technologies,
+            such as 3D representations, Virtual Reality and Mixed Reality, approximate this reality. This paper explores how the additional cues
+            provided by these technologies, through enhanced depth, presence and locomotion, might improve information recall when consuming
+            a corpus of visualizations. Our baseline consists of a 2D page presenting visualizations in a sequential order. We study the effect of
+            adding (1) spatial cues– placing visualizations in a 3D room (3D, VR and MR); (2) dynamic depth cues– enabling users to virtually
+            change their point of view within a 3D room (VR and MR), and (3) kinesthetic cues associated with locomotion– enabling the user to
+            physically move in a room in Mixed Reality (MR). Results of our study show increased recall, and greater richness of data understanding
+            in the Mixed Reality condition. Participants recalled more Isotype visualizations, more syntactic details and more semantic patterns.
+            We discuss how kinesthetic cues provided by locomotion in MR could contribute to these results. We also discuss why we did not
+            observe comparable performance in 3D and Virtual Reality, which has been observed in related contexts (e.g., Data Mountain,
+            Memory Palace.)
             
             </div>
 
